# rag-hyperparameter-tuning

./: README.md  pyproject.toml  requirements.txt
results/: baselines.json  experiment_results.csv  hill_climbing_predictions.json  hill_climbing_predictions_with_context.sample.json  random_search_predictions.json  random_search_predictions_with_context.json  random_search_predictions_with_context.sample.json  simulated_annealing_predictions.json  summary.json
results/baseline_2000/: baselines.json
results/baseline_2000/live/: progress.json  qa_traces.jsonl
results/baseline_only/: baselines.json
results/baseline_only/live/: progress.json  qa_traces.jsonl
results/hill_climbing/: baselines.json  experiment_results.csv  summary.json
results/hill_climbing/live/: evaluations.jsonl  progress.json  qa_traces.jsonl  runs.jsonl
results/hill_climbingSmall/: baselines.json  experiment_results.csv
results/hill_climbingSmall/live/: evaluations.jsonl  progress.json  qa_traces.jsonl
results/live/: evaluations.jsonl  progress.json  runs.jsonl
results/simulated_annealing/: baselines.json  experiment_results.csv
results/simulated_annealing/live/: runs.jsonl  (+2 more)
src/: main.py  report.py  reporting.py
src/algorithms/: __init__.py  genetic_algorithm.py  hill_climbing.py  random_search.py  simulated_annealing.py
src/rag/: config.py  evaluator.py  fitness.py  pipeline.py  search_space.py
src/web/: app.py
tests/: __init__.py
tests/algorithms/: test_hill_climbing.py  test_random_search.py  test_simulated_annealing.py
tests/rag/: test_evaluator.py  test_pipeline.py
(+8 files in other folders)
